Revise .gitignore to include directory patternsc
Updated patterns for Full_adder, Subtractor, and multiplier directories to include all files while excluding specific source files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,13 @@
 *.vhd~
 *.#
 
-Full_adder\*
-!Full_adder\Full_adder.srcs
+Full_adde/*
+!Full_adder/Full_adder.srcs
 
-Subtractor\*
-!Subtractor\Subtractor.srcs
+Subtractor/*
+!Subtractor/Subtractor.srcs
 
-multiplier\*
-!multiplier\multiplier.srcs
+multiplier/*
+!multiplier/multiplier.srcs
 
 
